--- a/src/app/features/custom-presentation-request/home/home.component.html
+++ b/src/app/features/custom-presentation-request/home/home.component.html
@@ -1,5 +1,5 @@
 <vc-wallet-layout>
-  <div body class="container">
+  <div body >
     <h5>Invoke Wallet</h5>
     <div class="wrapper">
         <router-outlet></router-outlet>
