--- a/src/app/features/presentation-request-preparation/home/home.component.scss
+++ b/src/app/features/presentation-request-preparation/home/home.component.scss
@@ -2,12 +2,10 @@
 :host {
 
   .button-container {
-    padding-top: 10px;
-    text-align: end;
-
-    button {
-      margin: 8px 8px 8px 0;
-    }
+    display: flex;
+    justify-content: end;
+    gap: 8px;
+    margin-top: 20px;
   }
 
   mat-step {
