--- a/src/app/features/wallet-redirect/wallet-redirect.component.html
+++ b/src/app/features/wallet-redirect/wallet-redirect.component.html
@@ -1,5 +1,5 @@
 <vc-wallet-layout>
-  <div body class="container">
+  <div body >
     <div class="bg-panel">
       <vc-presentations-results [concludedTransaction]="concludedTransaction" *ngIf="concludedTransaction"></vc-presentations-results>
     </div>
