--- a/src/app/shared/elements/body-actions/body-actions.component.html
+++ b/src/app/shared/elements/body-actions/body-actions.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="button-container">
   <ng-container *ngFor="let action of actions | orderBy: 'desc'">
     <vc-button class="vc-button" [name]="action.label" [id]="action.id" [mode]="action.mode" [isDisabled]="action.disabled" [color]="action.color" (clicked)="runClick(action)"></vc-button>
   </ng-container>
