--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -8,8 +8,7 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.elevation-classes();
-@include mat.app-background();
+@include mat.core;
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
@@ -27,27 +26,11 @@ $verifier-ui-theme: mat.m2-define-light-theme((
         primary: $verifier-ui-primary,
         accent: $verifier-ui-accent,
         warn: $verifier-ui-warn,
-    )
+    ),
+    typography: mat.m2-define-typography-config(),
 ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($verifier-ui-theme);
-
-.mat-mdc-radio-button.mat-primary {
-    --mdc-radio-disabled-selected-icon-color: #000;
-    --mdc-radio-disabled-unselected-icon-color: #000;
-    --mdc-radio-unselected-focus-icon-color: #212121;
-    --mdc-radio-unselected-hover-icon-color: #212121;
-    --mdc-radio-unselected-icon-color: rgb(0 0 0 / 54%);
-    --mdc-radio-unselected-pressed-icon-color: rgb(0 0 0 / 54%);
-    --mdc-radio-selected-focus-icon-color: #2A5ED9;
-    --mdc-radio-selected-hover-icon-color: #2A5ED9;
-    --mdc-radio-selected-icon-color: #2A5ED9;
-    --mdc-radio-selected-pressed-icon-color: #2A5ED9;
-    --mat-mdc-radio-ripple-color: #000;
-    --mat-mdc-radio-checked-ripple-color: #2A5ED9;
-}
-
-body { font-family: Roboto, "Helvetica Neue", sans-serif; margin: 0; }
