--- a/src/app/features/presentation-request-preparation/home/home.component.html
+++ b/src/app/features/presentation-request-preparation/home/home.component.html
@@ -1,5 +1,5 @@
 <vc-wallet-layout>
-  <div body class="container ">
+  <div body>
     <h4>Define your presentation request</h4>
     <p>
       Follow the steps to specify what will be requested from the wallet to present.
@@ -11,29 +11,42 @@
             <ng-template matStepLabel>... select attestation(s)</ng-template>
             <vc-supported-attestations (selectionChangedEvent)="handleSelectionChangedEvent($event)"></vc-supported-attestations>
           </div>
+          
           <div class="button-container">
-            <button mat-raised-button matStepperNext>Next</button>
+            <button mat-raised-button matStepperNext [disabled]="!attestationsSelected()">Next</button>
           </div>
+        
         </mat-step>
 
         <mat-step>
           <div>
             <ng-template matStepLabel>...select attestation(s) attributes</ng-template>
-            <vc-attribute-selection *ngIf="attestationsSelection !== null"
-                                    [attestationsSelection]="attestationsSelection"
+            <vc-attribute-selection *ngIf="selectedAttestations !== null"
+                                    [attestationsSelection]="selectedAttestations"
                                     (attributesCollectedEvent)="handleAttributesCollectedEvent($event)"
             ></vc-attribute-selection>
           </div>
           <div class="button-container">
             <button mat-raised-button matStepperPrevious>Back</button>
-            <button mat-raised-button matStepperNext>Next</button>
+            <button mat-raised-button matStepperNext [disabled]="!attributesSelected()">Next</button>
           </div>
         </mat-step>
 
         <mat-step>
           <div style="padding-top: 10px">
-            <ng-template matStepLabel>...review and proceed</ng-template>
+            <ng-template matStepLabel>...select presentation query type and submit</ng-template>
+            
+            <div class="query-type-container">
+              <mat-button-toggle-group [formControl]="queryTypeControl" 
+                (valueChange)="handleQueryTypeChangedEvent($event)"  
+                aria-label="Presentation query type" >
+                <mat-button-toggle value="prex">Presentation Exchange</mat-button-toggle>
+                <mat-button-toggle value="dcql">DCQL</mat-button-toggle>
+              </mat-button-toggle-group>
+            </div>
+
             <mat-expansion-panel>
+
               <mat-expansion-panel-header>
                 <mat-panel-title><span>Your presentation request so far...</span></mat-panel-title>
               </mat-expansion-panel-header>
