--- a/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
+++ b/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
@@ -1,18 +1,16 @@
 <div>
-  <div>
+  <div class="result-container">
     <ng-container *ngIf="attestations$ | async as attestations">
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>You requested for...</mat-panel-title>
         </mat-expansion-panel-header>
-        <vc-editor [editable]="false" [code]="presentationRequest"></vc-editor>
+        <vc-editor [editable]="false" [code]="presentationQuery"></vc-editor>
       </mat-expansion-panel>
 
-      <div class="bg-panel">
-        ...and wallet responded with <strong>{{ attestations.length }}</strong> document(s) ...
-        <div class="show-logs" style="float: right">
-          <a (click)="openLogs()">transaction log</a>
-        </div>
+      <div class="documents-and-log">
+        <span>...and wallet responded with <strong>{{ attestations.length }}</strong> document(s) ...</span>
+        <a mat-button (click)="openLogs()">transaction log</a>
       </div>
 
       <ng-container *ngFor="let attestation of attestations;">
@@ -32,7 +30,6 @@
             <button mat-stroked-button (click)="viewContents(attestation)">View Content</button>
           </mat-card-actions>
         </mat-card>
-        <br>
       </ng-container>
     </ng-container>
   </div>
