--- a/src/app/features/invoke-wallet/components/qr-code/qr-code.component.scss
+++ b/src/app/features/invoke-wallet/components/qr-code/qr-code.component.scss
@@ -2,6 +2,14 @@
 @use '/src/layout-breakpoint' as points;
 
 :host {
+    .below-qr-code {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 4px;
+        margin: 1rem 0;
+    }
+
     .vc-verifiable-credential {
         align-items: center;
         display: flex;
@@ -16,7 +24,6 @@
           font-size: 16px;
           height: 20px;
           padding: 1rem;
-          margin: 1rem 0;
           transition: background 225ms ease-in-out 0s;
           -webkit-user-select: none;
           user-select: none;
@@ -63,16 +70,7 @@
                 }
             }
         }
-        .show-logs {
-          display: flex;
-          a {
-            color: map-get(map-get(temp.$palette, color), primary);
-            cursor: pointer;
-            font-size: 16px;
-            margin-top: 2rem;
-            text-decoration: underline;
-          }
-        }
+
     }
     @media (max-width: map-get(points.$breakpoints, xs)) and  (min-width: map-get(points.$breakpoints, sm)){
         .vc-verifiable-credential {
