--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -13,51 +13,24 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$verifier-ui-primary: mat.define-palette(mat.$indigo-palette);
-$verifier-ui-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$verifier-ui-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$verifier-ui-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$verifier-ui-warn: mat.define-palette(mat.$red-palette);
+$verifier-ui-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$verifier-ui-theme: mat.define-light-theme((
+$verifier-ui-theme: mat.m2-define-light-theme((
     color: (
         primary: $verifier-ui-primary,
         accent: $verifier-ui-accent,
         warn: $verifier-ui-warn,
-    )
+    ),
+    typography: mat.m2-define-typography-config(),
 ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($verifier-ui-theme);
-
-.mat-mdc-radio-button.mat-primary {
-    --mdc-radio-disabled-selected-icon-color: #000;
-    --mdc-radio-disabled-unselected-icon-color: #000;
-    --mdc-radio-unselected-focus-icon-color: #212121;
-    --mdc-radio-unselected-hover-icon-color: #212121;
-    --mdc-radio-unselected-icon-color: rgb(0 0 0 / 54%);
-    --mdc-radio-unselected-pressed-icon-color: rgb(0 0 0 / 54%);
-    --mdc-radio-selected-focus-icon-color: #2A5ED9;
-    --mdc-radio-selected-hover-icon-color: #2A5ED9;
-    --mdc-radio-selected-icon-color: #2A5ED9;
-    --mdc-radio-selected-pressed-icon-color: #2A5ED9;
-    --mat-mdc-radio-ripple-color: #000;
-    --mat-mdc-radio-checked-ripple-color: #2A5ED9;
-}
-
-body { font-family: Roboto, "Helvetica Neue", sans-serif; margin: 0; }
-
-.show-logs {
-  //display: flex;
-  a {
-    color: map-get(map-get(temp.$palette, color), primary);
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 2rem;
-    text-decoration: underline;
-  }
-}
