--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,29 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
-@use 'template' as temp;
-@use '/src/layout-breakpoint' as points;
+@use "template" as temp;
+@use "/src/layout-breakpoint" as points;
 
 html {
-    height: 100vh;
-    width: 100vw;
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
-    background: map-get(map-get(map-get(temp.$palette, general), bg), paper);
-    height: inherit;
-    overflow-x: hidden;
-    width: inherit;
+  font-family: Roboto, "Helvetica Neue", sans-serif; margin: 0;
+  background: map-get(map-get(map-get(temp.$palette, general), bg), paper);
+  height: inherit;
+  overflow-x: hidden;
 }
 
 main {
-    height: 100vh;
-    margin: 0;
-    overflow: hidden auto;
-    padding: 0;
-    width: 100vw;
+  height: 100vh;
+  margin: 0;
+  overflow: hidden auto;
+  padding: 0;
+}
+
+.container {
+  max-width: 36em;
+  margin: 0 auto;
+  padding: 0 0.5rem;
 }
 
 .bg-panel {
-    background-color: temp.$backgroundDefault;
-    border-radius: 16px;
-    padding: 1.5rem;
+  background-color: temp.$backgroundDefault;
+  border-radius: 16px;
+  padding: 1.5rem;
 }
