Add a note indicating the compatible openid4vp draft that is implemented by the verifier.

--- a/src/app/core/layout/wallet-layout/wallet-layout.component.html
+++ b/src/app/core/layout/wallet-layout/wallet-layout.component.html
@@ -2,4 +2,12 @@
 <div class="container">
   <ng-content select="[body-title]"></ng-content>
   <ng-content select="[body]"></ng-content>
+  <p class="compatibility-note">
+    This verifier is compatible with
+    <a
+      href="https://openid.net/specs/openid-4-verifiable-presentations-1_0.html"
+      target="_blank"
+      >OpenID4VP Draft <span>{{ environment.openid4vpDraft }}</span></a
+    >
+  </p>
 </div>
