--- a/src/app/features/invoke-wallet/components/view-attestation/view-attestation.component.html
+++ b/src/app/features/invoke-wallet/components/view-attestation/view-attestation.component.html
@@ -3,47 +3,60 @@
 <mat-dialog-content class="mat-typography">
   <mat-tab-group>
     <mat-tab label="Attributes">
+      <!-- Main attribute list -->
       <mat-list>
-        <mat-list-item *ngFor="let option of attestation.attributes; trackBy: trackByFn">
-          <span matListItemTitle>
-            <strong>{{option.key}}</strong>
-          </span>
-          <span matListItemLine>
-            <ng-container *ngIf="isJson(option.value); else plainText">
-              <!-- Recursive template for nested JSON -->
-              <ng-container *ngTemplateOutlet="recursiveJson; context:{ $implicit: parseJson(option.value), level: 0 }"></ng-container>
-            </ng-container>
-            <ng-template #plainText>
-              <span>{{option.value}}</span>
-            </ng-template>
-          </span>
-        </mat-list-item>
+        <ng-container *ngFor="let option of attestation.attributes; trackBy: trackByFn">
+          <mat-list-item>
+            <span matListItemTitle>
+              <strong>{{option.key}}</strong>
+            </span>
+            <span matListItemLine style="display: flex">
+              <ng-container *ngIf="isJson(option.value); else plainText">
+                <ng-container *ngTemplateOutlet="recursiveList; context:{ $implicit: parseJson(option.value) }"></ng-container>
+              </ng-container>
+              <ng-template #plainText>
+                <span [innerHTML]="option.value" style="display: flex; padding-top: 1em"></span>
+              </ng-template>
+            </span>
+          </mat-list-item>
+          <mat-divider></mat-divider>
+        </ng-container>
       </mat-list>
 
-      <!-- Recursive template definition -->
-      <ng-template #recursiveJson let-value let-level="level">
-        <ng-container *ngIf="isObject(value)">
-          <div *ngFor="let item of objectToKeyValue(value); trackBy: trackByFn" class="nested-attributes">
-            <span><strong>{{item.key}}</strong>:</span>
-            <ng-container *ngIf="isObject(item.value) || isArray(item.value)">
-              <ng-container *ngTemplateOutlet="recursiveJson; context:{ $implicit: item.value, level: level + 1 }"></ng-container>
+      <!-- Recursive template for nested lists -->
+      <ng-template #recursiveList let-value>
+        <mat-list class="nested-list">
+          <ng-container *ngIf="isObject(value)">
+            <ng-container *ngFor="let item of objectToKeyValue(value); trackBy: trackByFn">
+              <div class="nested-item">
+                <div class="nested-key"><strong>{{item.key}}</strong></div>
+                <div class="nested-value">
+                  <ng-container *ngIf="isObject(item.value) || isArray(item.value)">
+                    <ng-container *ngTemplateOutlet="recursiveList; context:{ $implicit: item.value }"></ng-container>
+                  </ng-container>
+                  <ng-container *ngIf="!isObject(item.value) && !isArray(item.value)">
+                    {{item.value}}
+                  </ng-container>
+                </div>
+              </div>
             </ng-container>
-            <ng-container *ngIf="!isObject(item.value) && !isArray(item.value)">
-              {{item.value}}
+          </ng-container>
+          <ng-container *ngIf="isArray(value)">
+            <ng-container *ngFor="let item of value; let i = index; trackBy: trackByFn">
+              <div class="nested-item">
+                <div class="nested-key"><strong>[{{i}}]</strong>:</div>
+                <div class="nested-value">
+                  <ng-container *ngIf="isObject(item) || isArray(item)">
+                    <ng-container *ngTemplateOutlet="recursiveList; context:{ $implicit: item }"></ng-container>
+                  </ng-container>
+                  <ng-container *ngIf="!isObject(item) && !isArray(item)">
+                    {{item}}
+                  </ng-container>
+                </div>
+              </div>
             </ng-container>
-          </div>
-        </ng-container>
-        <ng-container *ngIf="isArray(value)">
-          <div *ngFor="let item of value; let i = index; trackBy: trackByFn" class="nested-attributes">
-            <strong>[{{i}}]</strong>: 
-            <ng-container *ngIf="isObject(item) || isArray(item)">
-              <ng-container *ngTemplateOutlet="recursiveJson; context:{ $implicit: item, level: level + 1 }"></ng-container>
-            </ng-container>
-            <ng-container *ngIf="!isObject(item) && !isArray(item)">
-              {{item}}
-            </ng-container>
-          </div>
-        </ng-container>
+          </ng-container>
+        </mat-list>
       </ng-template>
     </mat-tab>
 
