--- a/src/app/features/invoke-wallet/components/view-attestation/view-attestation.component.scss
+++ b/src/app/features/invoke-wallet/components/view-attestation/view-attestation.component.scss
@@ -1,7 +1,25 @@
 @use '/src/template' as temp;
 
 :host {
-    .nested-attributes {
-        padding-left: 1em;
+    .nested-list {
+        margin-left: 1em;
+    }
+
+    .nested-item {
+        align-items: flex-start;
+    }
+
+    .nested-key {
+        margin-right: 4px;
+        min-width: 3em;
+    }
+
+    .nested-value {
+        flex: 1;
+    }
+
+    mat-list-item {
+        height: auto !important;
+        min-height: 48px;
     }
 }
