--- a/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
+++ b/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
@@ -1,39 +1,39 @@
 <div>
   <div>
-    <ng-container *ngIf="attestations$ | async as attestations">
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>You requested for...</mat-panel-title>
-        </mat-expansion-panel-header>
-        <vc-editor [editable]="false" [code]="presentationRequest"></vc-editor>
-      </mat-expansion-panel>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>You requested for...</mat-panel-title>
+      </mat-expansion-panel-header>
+      <vc-editor [editable]="false" [code]="presentationRequest"></vc-editor>
+    </mat-expansion-panel>
 
-      <div class="bg-panel">
-        ...and wallet responded with <strong>{{ attestations.length }}</strong> document(s) ...
-        <div class="show-logs" style="float: right">
-          <a (click)="openLogs()">transaction log</a>
-        </div>
-      </div>
+    <div class="bg-panel">
+      ...and wallet responded with <strong>{{ attestations.length }}</strong> document(s) ...
+    </div>
 
-      <ng-container *ngFor="let attestation of attestations;">
-        <mat-card *ngIf="isErrored(attestation)" appearance="outlined">
-          <mat-card-header>
-            <mat-card-title>Error: {{ attestation.reason }}</mat-card-title>
-            <mat-card-subtitle> in <i> {{ attestation.format }} </i> format</mat-card-subtitle>
-          </mat-card-header>
-        </mat-card>
-
-        <mat-card *ngIf="!isErrored(attestation)" appearance="outlined">
-          <mat-card-header>
-            <mat-card-title>{{ attestation.name }}</mat-card-title>
-            <mat-card-subtitle> in <i> {{ attestation.format }} </i> format</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-actions align="end">
-            <button mat-stroked-button (click)="viewContents(attestation)">View Content</button>
-          </mat-card-actions>
-        </mat-card>
-        <br>
-      </ng-container>
+    <ng-container *ngFor="let attestation of attestations;">
+      <mat-card appearance="outlined">
+        <mat-card-header>
+          <mat-card-title>{{ attestation.name }}</mat-card-title>
+          <mat-card-subtitle> in <i> {{ attestation.format }} </i> format</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-actions align="end">
+          <div *ngIf="!missingAttributes[attestation.name]" class="request-meesage success">
+            <h6>GOOD TO GO</h6>
+          </div>
+          <div *ngIf="missingAttributes[attestation.name]" class="request-meesage error">
+            <div>
+              <h6>Missing data</h6>
+              <div *ngFor="let missingAttr of missingAttributes[attestation.name]">
+                {{missingAttr}}
+              </div>
+            </div>
+          </div>
+          <button mat-stroked-button (click)="viewContents(attestation)">View Content </button>
+        </mat-card-actions>
+      </mat-card>
+      <br>
     </ng-container>
+
   </div>
 </div>
