--- a/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.scss
+++ b/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.scss
@@ -15,4 +15,19 @@
             margin-right: 1rem;
         }
     }
+
+    .request-meesage {
+        padding: 1rem;
+        border-radius: 8px;
+        margin-right: auto;
+        text-align: center;
+    }
+
+    .error {
+        background-color: #f44336;
+    }
+
+    .success {
+        background-color: limegreen;
+    }
 }
