--- a/src/app/features/presentation-request-preparation/home/home.component.html
+++ b/src/app/features/presentation-request-preparation/home/home.component.html
@@ -1,66 +1,103 @@
 <vc-wallet-layout>
-  <div body class="container ">
-    <h4>Define your presentation request</h4>
-    <p>
-      Follow the steps to specify what will be requested from the wallet to present.
-    </p>
-    <mat-stepper orientation="vertical" linear #stepper>
-      <form>
-        <mat-step>
-          <div>
-            <ng-template matStepLabel>... select attestation(s)</ng-template>
-            <vc-supported-attestations (selectionChangedEvent)="handleSelectionChangedEvent($event)"></vc-supported-attestations>
-          </div>
-          <div class="button-container">
-            <button mat-raised-button matStepperNext>Next</button>
-          </div>
-        </mat-step>
+  <div body>
+    <button class="wizard-btn" (click)="showStepper = !showStepper">Display wizard</button>
+    <div class="container " [style.display]="showStepper ? 'block': 'none'">
+      <h4>Define your presentation request</h4>
+      <p>
+        Follow the steps to specify what will be requested from the wallet to present.
+      </p>
+      <mat-stepper orientation="vertical" linear #stepper>
+        <form>
+          <mat-step>
+            <div>
+              <ng-template matStepLabel>... select attestation(s)</ng-template>
+              <vc-supported-attestations
+                (selectionChangedEvent)="handleSelectionChangedEvent($event)"></vc-supported-attestations>
+            </div>
+            <div class="button-container">
+              <button mat-raised-button matStepperNext>Next</button>
+            </div>
+          </mat-step>
 
-        <mat-step>
-          <div>
-            <ng-template matStepLabel>...select attestation(s) attributes</ng-template>
-            <vc-attribute-selection *ngIf="attestationsSelection !== null"
-                                    [attestationsSelection]="attestationsSelection"
-                                    (attributesCollectedEvent)="handleAttributesCollectedEvent($event)"
-            ></vc-attribute-selection>
-          </div>
-          <div class="button-container">
-            <button mat-raised-button matStepperPrevious>Back</button>
-            <button mat-raised-button matStepperNext>Next</button>
-          </div>
-        </mat-step>
+          <mat-step>
+            <div>
+              <ng-template matStepLabel>...select attestation(s) attributes</ng-template>
+              <vc-attribute-selection *ngIf="attestationsSelection !== null"
+                [attestationsSelection]="attestationsSelection"
+                (attributesCollectedEvent)="handleAttributesCollectedEvent($event)"></vc-attribute-selection>
+            </div>
+            <div class="button-container">
+              <button mat-raised-button matStepperPrevious>Back</button>
+              <button mat-raised-button matStepperNext>Next</button>
+            </div>
+          </mat-step>
 
-        <mat-step>
-          <div style="padding-top: 10px">
-            <ng-template matStepLabel>...review and proceed</ng-template>
-            <mat-expansion-panel>
-              <mat-expansion-panel-header>
-                <mat-panel-title><span>Your presentation request so far...</span></mat-panel-title>
-              </mat-expansion-panel-header>
+          <mat-step>
+            <div style="padding-top: 10px">
+              <ng-template matStepLabel>...review and proceed</ng-template>
+              <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                  <mat-panel-title><span>Your presentation request so far...</span></mat-panel-title>
+                </mat-expansion-panel-header>
+                <pre *ngIf="canProceed()">{{ initializationRequest | json }}</pre>
+                <pre *ngIf="!canProceed()">..nothing prepared yet...</pre>
+              </mat-expansion-panel>
+            </div>
+            <div class="button-container">
+              <button mat-raised-button matStepperPrevious type="button">Back</button>
+              <button mat-raised-button matStepperNext type="button" (click)="proceedToInvokeWallet()"
+                [disabled]="!canProceed()">Next</button>
+            </div>
+          </mat-step>
+        </form>
+      </mat-stepper>
+    </div>
 
-              <button mat-button matTooltip="Copy content"  style="float: right"
-                      *ngIf="canProceed()"
-                      [cdkCopyToClipboard]="initializationRequest | json">
-                <mat-icon>content_copy</mat-icon>
-              </button>
-              <span id="as-pre" *ngIf="canProceed()">{{ initializationRequest | json }}</span>
-
-              <pre *ngIf="!canProceed()">..nothing prepared yet...</pre>
-            </mat-expansion-panel>
+    <div class="btn-container">
+        <a [routerLink]="['/custom-request', { type: 'PID' }]" routerLinkActive="active">
+          <div class="btn">
+            <a href="https://citybee.lt/en/">
+              <img src="https://citybee.lt/wp-content/uploads/2023/05/CityBee_Logotipas.svg" alt="">
+            </a>
+            PID
           </div>
-          <div class="button-container">
-            <button mat-raised-button matStepperPrevious type="button">Back</button>
-            <button mat-raised-button matStepperNext type="button" (click)="proceedToInvokeWallet()" [disabled]="!canProceed()">Next
-            </button>
-          </div>
-        </mat-step>
-      </form>
-    </mat-stepper>
+        </a>
 
-    <p>
-      Or, if this doesn't work for you, go straight to defining your presentation request
-      <a routerLink="/custom-request" routerLinkActive="active">here</a>
-    </p>
+        <a [routerLink]="['/custom-request', { type: 'PIDMDL' }]" routerLinkActive="active">
+          <div class="btn">
+            <a href="https://citybee.lt/en/">
+              <img src="https://citybee.lt/wp-content/uploads/2023/05/CityBee_Logotipas.svg" alt="">
+            </a>
+            PID + MDL
+          </div>
+        </a>
+
+        <a [routerLink]="['/custom-request', { type: 'MDL' }]" routerLinkActive="active">
+          <div class="btn">
+            <a href="https://citybee.lt/en/">
+              <img src="https://citybee.lt/wp-content/uploads/2023/05/CityBee_Logotipas.svg" alt="">
+            </a>
+            MDL
+          </div>
+        </a>
+        
+        <a [routerLink]="['/custom-request', { type: 'PartialMDL' }]" routerLinkActive="active">
+          <div class="btn">
+            <a href="https://citybee.lt/en/">
+              <img src="https://citybee.lt/wp-content/uploads/2023/05/CityBee_Logotipas.svg" alt="">
+            </a>
+            Partial MDL
+          </div>
+        </a>
+        <a [routerLink]="['/custom-request', { type: 'PartialMDLUnderage' }]" routerLinkActive="active">
+          <div class="btn">
+            <a href="https://citybee.lt/en/">
+              <img src="https://citybee.lt/wp-content/uploads/2023/05/CityBee_Logotipas.svg" alt="">
+            </a>
+            Partial MDL Underage
+          </div>
+        </a>
+    </div>
 
   </div>
 </vc-wallet-layout>
