--- a/src/app/features/presentation-request-preparation/home/home.component.scss
+++ b/src/app/features/presentation-request-preparation/home/home.component.scss
@@ -1,4 +1,3 @@
-
 :host {
 
   .button-container {
@@ -16,13 +15,47 @@
       padding: 2px;
     }
   }
+}
 
-  span#as-pre {
-    white-space: pre-wrap;
-    word-break: break-word;
-    font-family: inherit;
-    unicode-bidi: isolate;
-    margin: 1em 0;
+.btn-container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 480px;
+  padding: 0.5rem 0;
+  gap: 0.5rem;
+
+  a {
+    text-decoration: none;
+    color: #000;
   }
+}
 
+.btn {
+  width: 120px;
+  padding: 1rem;
+  text-align: center;
+  border: 1px solid #eee;
+  border-radius: 0.5rem;
+  font-size: 12px;
+  transition: 0.2s ease-in-out;
+
+  &:hover {
+    box-shadow: 1px 1px 4px #999;
+    border: 1px solid #999;
+  }
+}
+
+.wizard-btn {
+  height: 32px;
+  border: 1px solid #eee;
+  border-radius: 6px;
+  background-color: #fff;
+  margin-top: 8px;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+
+  &:hover {
+    box-shadow: 1px 1px 4px #999;
+    border: 1px solid #999;
+  }
 }
