fix: add mandatory 'limit_disclosure' as per iso-18013:7

--- a/src/app/features/presentation-request-preparation/home/home.component.html
+++ b/src/app/features/presentation-request-preparation/home/home.component.html
@@ -54,49 +54,49 @@
     </div>
 
     <div class="btn-container">
-        <a [routerLink]="['/custom-request', { type: 'PID' }]" routerLinkActive="active">
-          <div class="btn">
-            <a href="https://citybee.lt/en/">
-              <img src="assets/logo.svg" alt="">
-            </a>
-            PID
-          </div>
-        </a>
+      <a [routerLink]="['/custom-request', { type: 'PID' }]" routerLinkActive="active">
+        <div class="btn">
+          <a href="https://citybee.lt/en/">
+            <img src="assets/logo.svg" alt="">
+          </a>
+          PID (mDoc)
+        </div>
+      </a>
 
-        <a [routerLink]="['/custom-request', { type: 'PIDMDL' }]" routerLinkActive="active">
-          <div class="btn">
-            <a href="https://citybee.lt/en/">
-              <img src="assets/logo.svg" alt="">
-            </a>
-            PID + MDL
-          </div>
-        </a>
+      <a [routerLink]="['/custom-request', { type: 'PIDMDL' }]" routerLinkActive="active">
+        <div class="btn">
+          <a href="https://citybee.lt/en/">
+            <img src="assets/logo.svg" alt="">
+          </a>
+          PID (mDoc) + MDL (mDoc)
+        </div>
+      </a>
 
-        <a [routerLink]="['/custom-request', { type: 'MDL' }]" routerLinkActive="active">
-          <div class="btn">
-            <a href="https://citybee.lt/en/">
-              <img src="assets/logo.svg" alt="">
-            </a>
-            MDL
-          </div>
-        </a>
-        
-        <a [routerLink]="['/custom-request', { type: 'PartialMDL' }]" routerLinkActive="active">
-          <div class="btn">
-            <a href="https://citybee.lt/en/">
-              <img src="assets/logo.svg" alt="">
-            </a>
-            Partial MDL
-          </div>
-        </a>
-        <a [routerLink]="['/custom-request', { type: 'PartialMDLUnderage' }]" routerLinkActive="active">
-          <div class="btn">
-            <a href="https://citybee.lt/en/">
-              <img src="assets/logo.svg" alt="">
-            </a>
-            Partial MDL Underage
-          </div>
-        </a>
+      <a [routerLink]="['/custom-request', { type: 'MDL' }]" routerLinkActive="active">
+        <div class="btn">
+          <a href="https://citybee.lt/en/">
+            <img src="assets/logo.svg" alt="">
+          </a>
+          MDL (mDoc)
+        </div>
+      </a>
+
+      <a [routerLink]="['/custom-request', { type: 'PartialMDL' }]" routerLinkActive="active">
+        <div class="btn">
+          <a href="https://citybee.lt/en/">
+            <img src="assets/logo.svg" alt="">
+          </a>
+          Partial MDL (mDoc)
+        </div>
+      </a>
+      <a [routerLink]="['/custom-request', { type: 'PartialMDLUnderage' }]" routerLinkActive="active">
+        <div class="btn">
+          <a href="https://citybee.lt/en/">
+            <img src="assets/logo.svg" alt="">
+          </a>
+          Partial MDL Underage (mDoc)
+        </div>
+      </a>
     </div>
 
   </div>
