Save registration data

--- a/src/app/features/presentation-request-preparation/home/home.component.html
+++ b/src/app/features/presentation-request-preparation/home/home.component.html
@@ -2,7 +2,7 @@
   <div body>
 
     <h6 class="reg-data-header">
-      Please provide us with information that will be used for reporting purposes
+      Before continuing, please provide us with information that could be used for reporting purposes
     </h6>
 
     <table class="reg-data">
