--- a/src/app/features/presentation-request-preparation/home/home.component.html
+++ b/src/app/features/presentation-request-preparation/home/home.component.html
@@ -8,11 +8,11 @@
     <table class="reg-data">
       <tbody>
       <tr>
-        <td><label for="reader-country">Reader country</label></td>
+        <td><label for="reader-country">Holder implementation country</label></td>
         <td><input type="text" id="reader-country" name="reader-country" [(ngModel)]="readerCountry" disabled="{{showStepper}}"/></td>
       </tr>
       <tr>
-        <td><label for="reader-company-name">Reader company name</label></td>
+        <td><label for="reader-company-name">Holder implementation company name</label></td>
         <td><input type="text" id="reader-company-name" name="reader-company-name" [(ngModel)]="readerCompanyName" disabled="{{showStepper}}"/></td>
       </tr>
       <tr>
