Update spec version and link

--- a/src/app/core/layout/wallet-layout/wallet-layout.component.html
+++ b/src/app/core/layout/wallet-layout/wallet-layout.component.html
@@ -5,9 +5,9 @@
   <p class="compatibility-note">
     This verifier is compatible with
     <a
-      href="https://openid.net/specs/openid-4-verifiable-presentations-1_0-24.html"
+      href="https://openid.net/specs/openid-4-verifiable-presentations-1_0.html"
       target="_blank"
-      >OpenID4VP Draft <span>{{ environment.openid4vpDraft }}</span></a
+      >OpenID4VP <span>{{ environment.openid4vpDraft }}</span></a
     >
   </p>
 </div>
