Update panel title to clarify query ID display

--- a/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
+++ b/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
@@ -15,7 +15,7 @@
     <ng-container *ngFor="let entry of attestationsPerQuery | keyvalue">
       <mat-expansion-panel expanded="true">
         <mat-expansion-panel-header>
-          <mat-panel-title><span>for query with ID <strong>{{ entry.key }}</strong>:</span>
+          <mat-panel-title><span>for query <strong>{{ entry.key }}</strong>:</span>
           </mat-panel-title>
         </mat-expansion-panel-header>
 
