--- a/src/app/features/presentation-request-preparation/components/recursive-checkbox/recursive-checkbox.component.html
+++ b/src/app/features/presentation-request-preparation/components/recursive-checkbox/recursive-checkbox.component.html
@@ -3,6 +3,7 @@
     (click)="handleFn(field)"
     color="primary"
     [checked]="isCheckedFn(field.value)"
+    [disabled]="field.alwaysDisclose"
   >
     {{ field.label }}
   </mat-checkbox>
